[merge addon] Fix another layout issue

--- a/addon/merge/merge.css
+++ b/addon/merge/merge.css
@@ -16,6 +16,7 @@
 .CodeMirror-diff-pane {
   display: inline-block;
   white-space: normal;
+  vertical-align: top;
 }
 .CodeMirror-diff-pane-rightmost {
   position: absolute;
